force-app/main/default/objects/Booking__c/fields/Cancel_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Change_Reason__c</fullName>
    <label>Cancel/Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>