force-app/main/default/objects/Booking__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <formula>ISBLANK( ShowTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>