force-app/main/default/objects/Booking__c/fields/ShowTime__c.field-meta.xml
<CustomField>
    <fullName>ShowTime__c</fullName>
    <label>ShowTime</label>
    <type>Time</type>
</CustomField>