force-app/main/default/objects/Booking__c/fields/Total_Seat__c.field-meta.xml
<CustomField>
    <fullName>Total_Seat__c</fullName>
    <label>Total Seat</label>
    <summaryForeignKey>Booking_Line_Item__c.Bookings__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>