force-app/main/default/objects/Booking__c/validationRules/Cancel_Movie_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Movie_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Canceled&quot;),
ISBLANK( Cancel_Change_Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Cancel_Change_Reason__c</errorDisplayField>
    <errorMessage>Please enter a reason for  movie cancel.</errorMessage>
</ValidationRule>